# backend/swagger.yaml
@@ -236,3 +236,61 @@ paths:
           description: Bad Request
         500:
           description: Internal Server Error
+  /user/{id}:
+    get:
+      summary: Get user by ID
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: The ID of the user
+      responses:
+        200:
+          description: The user object
+          schema:
+            $ref: '#/definitions/User'
+        404:
+          description: User not found
+
+    put:
+      summary: Update user by ID
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: The ID of the user
+        - in: body
+          name: user
+          description: The user object with updated fields
+          schema:
+            $ref: '#/definitions/User'
+      responses:
+        200:
+          description: The updated user object
+          schema:
+            $ref: '#/definitions/User'
+        400:
+          description: Bad Request
+        404:
+          description: User not found
+
+    delete:
+      summary: Delete user by ID
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: The ID of the user
+      responses:
+        200:
+          description: User deleted successfully
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        404:
+          description: User not found
